--- a/www/index.html
+++ b/www/index.html
@@ -35,12 +35,12 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Device is Ready25</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jQuery.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
+       <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
