--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
         <title>Hello World</title>
     </head>
     <body>
+     <button id="borrar">borrar db</button>
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
@@ -45,5 +46,41 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        
+        <script>
+
+ var db;
+var shortName = 'rc2016';
+var version = '1.0';
+var displayName = 'rc2016';
+var maxSize = 65535;
+function nullHandler(testo){
+  alert(testo);
+};
+
+function successHandler(){
+  console.log("oka");
+};
+
+function errorHandler(tx,error) {
+   console.log('OKA: ' + error.message + ' code: ' + error.code);
+}
+
+function borrarDB() { 
+    var db = openDatabase(shortName, version, displayName, maxSize);
+    db.transaction(borracionDB, nullHandler("crear"), errorHandler);
+}
+function borracionDB(tx) { 
+var sql = "DROP TABLE carreras";
+    tx.executeSql(sql); 
+  }
+
+
+$("#borrar").click(function() {
+  borrarDB();
+});
+
+
+</script>
     </body>
 </html>
