--- a/www/index2.html
+++ b/www/index2.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <header>
-  <nav>
-  <div class="brand-logo center"><i class="material-icons">keyboard_arrow_left</i> ABR16/ABR18 <i class="material-icons">keyboard_arrow_right</i></div>
+  <nav class="blue lighten-1">
+  <div class="brand-logo center"><i class="mdi-hardware-keyboard-arrow-left"></i> ABR16/ABR18 <i class="mdi-hardware-keyboard-arrow-right"></i></div>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
@@ -23,13 +23,35 @@
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
       </ul>
-   
   </nav>
+</header>  
   
-  </header>
+<div class="progress">
+      <div class="indeterminate"></div>
+  </div>   
   <section>
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card" data-id_categoria="1">
+          <div class="card-image">
+            <img src="racing_calendar_pics/cat_id_1/f1-9.jpg">
+            <span class="card-title"><strong> FORMULA 1: </strong>  Zandvoort </span>
+          </div>
+          <div class="card-content">
+            <div class="col s10">
+              <p><i class="mdi-action-today"></i><strong> JUL12</strong> Round4</p>
+              <p> <i class="mdi-maps-place"></i> 455 kms</p>
+              <p> <i class="mdi-maps-directions-car"></i> Oscar y Juan Galvez </p>
+            </div>
+            <div class="col s2 destacado">
+                <i class="medium mdi-action-stars right blue-text  text-accent-3"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-      <footer class="page-footer">
+      <footer class="page-footer blue lighten-1">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
