--- a/www/index.html
+++ b/www/index.html
@@ -27,29 +27,36 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Racing Calendar</title>
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready25</p>
-            </div>
-        </div>
-        
-        <div id="eventos"></div>
+  <header>
+  <nav class="blue lighten-1">
+  <div class="brand-logo center"><i class="mdi-hardware-keyboard-arrow-left"></i> ABR16/ABR18 <i class="mdi-hardware-keyboard-arrow-right"></i></div>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+  </nav>
+</header>  
+  
+<div class="progress">
+      <div class="indeterminate"></div>
+  </div>   
+  <section id="eventos">
 
-        <button id="borrar">borrar db</button>
-      <footer id="pie">
+  </section>
+      <footer class="page-footer blue lighten-1">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Racing Calendar</h5>
                 <p class="grey-text text-lighten-4">Para saber qu&eacute; carreras hay el fin de semana.</p>
               </div>
-
             </div>
           </div>
           <div class="footer-copyright">
@@ -58,7 +65,7 @@
             <a class="grey-text text-lighten-4 right" href="http://autowikipedia.es" target="_blank">autowikipedia.es</a>
             </div>
           </div>
-        </footer>        
+        </footer>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jQuery.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
