--- a/www/index2.html
+++ b/www/index2.html
@@ -32,7 +32,7 @@
   <section>
     <div class="row">
       <div class="col s12 m12">
-        <div class="card" data-id_categoria="1">
+        <div class="card flow-text" data-id_categoria="1">
           <div class="card-image">
             <img src="racing_calendar_pics/cat_id_1/f1-9.jpg">
             <span class="card-title"><strong> FORMULA 1: </strong>  Zandvoort </span>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="footer-copyright">
-            <div class="container">
+            <div id="alfa" class="container">
             © 2015 Copyright Patricio Arango
             <a class="grey-text text-lighten-4 right" href="http://autowikipedia.es" target="_blank">autowikipedia.es</a>
             </div>
@@ -86,9 +86,12 @@
     }
     //el domingo siempre son 7 dias a partir del lunes establecido
     domingo = new Date(now.setDate(now.getDate() - now.getDay() + 7));
-    console.log(lunes + domingo);
+    //console.log(lunes + domingo);
   }
   get_dias_periodo(-1);
+
+  var a = Math.floor(Date.now() / 1000);
+  $("#alfa").html(a);
         </script>    
 </body>
 </html>
