--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,6 @@
     <body>
   <header>
   <nav class="blue lighten-1">
-  <div class="brand-logo center"><i class="mdi-hardware-keyboard-arrow-left"></i> ABR16/ABR18 <i class="mdi-hardware-keyboard-arrow-right"></i></div>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
@@ -41,6 +40,7 @@
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
       </ul>
+    <div class="center"><span class="flow-text" style="font-size:1.9em;"><i class="mdi-hardware-keyboard-arrow-left"></i><strong>ABR</strong>16/<strong>ABR</strong>18 <i class="mdi-hardware-keyboard-arrow-right"></i></span></div>       
   </nav>
 </header>  
   
