--- a/www/index2.html
+++ b/www/index2.html
@@ -15,7 +15,6 @@
 <body>
   <header>
   <nav class="blue lighten-1">
-  <div class="brand-logo center"><i class="mdi-hardware-keyboard-arrow-left"></i> ABR16/ABR18 <i class="mdi-hardware-keyboard-arrow-right"></i></div>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
@@ -23,6 +22,7 @@
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
       </ul>
+  <div class="center" id="rango_fechas" data-posicion="0"></div>      
   </nav>
 </header>  
   
@@ -72,26 +72,62 @@
         <script type="text/javascript">
         $(document).ready(function($) {
             $(".button-collapse").sideNav({menuWidth: 240, activationWidth: 70});
+              get_dias_periodo();
         });
         </script>    
         <script type="text/javascript">
-   function get_dias_periodo(semana) {
+monthNames = ["ENE", "FEB", "MAR", "ABR", "MAY", "JUN",
+    "JUL", "AGO", "SEP", "OCT", "NOV", "DIC"];
+
+$("#rango_fechas").on('click',".anterior_se",function(e) {
+    e.preventDefault();
+    var posicion_inicial = $("#rango_fechas").data("posicion");
+    var posicion_se = posicion_inicial - 1;
+    console.log(posicion_se);
+    $("#rango_fechas").data("posicion", posicion_se);
+    get_dias_periodo();
+    
+});
+$("#rango_fechas").on('click',".siguiente_se",function(e) {
+    e.preventDefault();
+    var posicion_inicial = $("#rango_fechas").data("posicion");
+    var posicion_se = posicion_inicial + 1;
+    console.log(posicion_se);
+    $("#rango_fechas").data("posicion", posicion_se);
+    get_dias_periodo();    
+});
+
+   function get_dias_periodo() {
+    var $rango_fechas = $("#rango_fechas");
+    var semana = $("#rango_fechas").data("posicion");
     var now = new Date();
-    var lunes;
-    var domingo;
+    var lunes; var lun; var domingo; var dom;
     if (semana < 0) {
       lunes = new Date(now.setDate(now.getDate() - now.getDay() + 1 + (semana * 7)));
+      lun = lunes.getMonth();
     } else {
       lunes = new Date(now.setDate(now.getDate() - now.getDay() + (1 + (semana * 7))));
+      lun = lunes.getMonth();
     }
     //el domingo siempre son 7 dias a partir del lunes establecido
     domingo = new Date(now.setDate(now.getDate() - now.getDay() + 7));
-    //console.log(lunes + domingo);
+    dom = domingo.getMonth();
+    
+    $rango_fechas.empty();
+    $rango_fechas.append('<span class="flow-text" style="font-size:1.9em;"><i class="mdi-hardware-keyboard-arrow-left anterior_se"></i><strong>' + monthNames[lun] + '</strong>' + lunes.getDate() + '<strong>/' + monthNames[dom] + '</strong>' + domingo.getDate() + ' <i class="mdi-hardware-keyboard-arrow-right siguiente_se"></i></span>');
+    return {
+        "fecha_inicial": lunes.yyyymmdd(),
+        "fecha_final": domingo.yyyymmdd()
+    }; 
   }
-  get_dias_periodo(-1);
 
-  var a = Math.floor(Date.now() / 1000);
-  $("#alfa").html(a);
+Date.prototype.yyyymmdd = function() {
+  var yyyy = this.getFullYear().toString();
+  var mm = (this.getMonth()+1).toString(); // getMonth() is zero-based
+  var dd  = this.getDate().toString();
+  return yyyy + (mm[1]?mm:"0"+mm[0]) + (dd[1]?dd:"0"+dd[0]); // padding
+};
+
         </script>    
 </body>
 </html>
