--- a/www/index.html
+++ b/www/index.html
@@ -43,10 +43,21 @@
     <div class="center" id="rango_fechas" data-posicion="0"></div>       
   </nav>
 </header>  
-  
-<div class="progress">
-      <div class="indeterminate"></div>
-  </div>   
+  <!-- loading -->
+  <div class="row center loading">
+     <div class="preloader-wrapper active">
+      <div class="spinner-layer spinner-red-only">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div><div class="gap-patch">
+          <div class="circle"></div>
+        </div><div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <section id="eventos">
 
   </section>
