--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
   <header>
   <nav class="blue lighten-1">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <i class="material-icons" id="arrow" style="display:none;">arrow_back</i>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
