--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     </head>
     <body>
   <header>
+<div class="navbar-fixed">  
   <nav class="blue lighten-1">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <i class="material-icons" id="arrow" style="display:none;">arrow_back</i>
@@ -43,6 +44,7 @@
       </ul>
     <div class="center" id="rango_fechas" data-posicion="0"></div>       
   </nav>
+</div>  
 </header>  
   <!-- loading -->
   <div class="row center loading">
