--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2015 Copyright Patricio Arango <!-- <button id="borrar">borrar db</button>-->
+            © 2015 Copyright Patricio Arango <button id="borrar">borrar db</button>
             <a class="grey-text text-lighten-4 right" href="http://autowikipedia.es" target="_blank">autowikipedia.es</a>
             </div>
           </div>
