--- a/www/index2.html
+++ b/www/index2.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <header>
-  <div class="navbar-fixed">
-  <nav class="blue lighten-1">
+<!--  <div class="navbar-fixed">
+  <nav class="blue lighten-1" id="nav_ppal">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <i class="material-icons" id="arrow" style="display:none;">arrow_back</i>
       <span id="cate_cont"></span>
@@ -27,7 +27,19 @@
       </ul>
   <div class="center valign" id="rango_fechas" data-posicion="0"></div>      
   </nav>
-  </div>
+  </div> -->
+
+<div class="navbar-fixed" id="nav_listado">
+  <nav class="blue lighten-1">   
+    <div class="nav-wrapper">
+    <ul class="left">
+          <li><a href="#"><i class="material-icons" id="arrow">arrow_back</i></a></li>
+    </ul>      
+      <a href="#" class="brand-logo center">Category / WRC</a>
+    </div>
+  </nav>  
+</div>
+
 </header>  
   <!-- 
 <div class="progress">
@@ -47,7 +59,7 @@
   </div>
 </div>-->
 <div class="row">
-  <div class="center red-text"><i class="material-icons medium">flash_on</i><span style="font-size:5em;font-weight:200;">175 </span><span style="font-size:3em;font-weight:200;">km/h</span></div>
+  <div class="center red-text"><i class="material-icons medium">flash_on</i><span style="font-size:5em;font-weight:200;">175 </span><span style="font-size:3em;font-weight:200;">races</span></div>
 </div>
   <section>
     <div class="row">
