--- a/www/index.html
+++ b/www/index.html
@@ -27,16 +27,14 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
-         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" /> -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Racing Calendar</title>
     </head>
     <body>
   <header>
-<div class="navbar-fixed">  
+<div class="navbar-fixed" id="nav_eventos">  
   <nav class="blue lighten-1">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <i class="material-icons" id="arrow" style="display:none;">arrow_back</i>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
@@ -46,6 +44,14 @@
     <div class="center" id="rango_fechas" data-posicion="0"></div>       
   </nav>
 </div>  
+
+<div class="navbar-fixed" id="nav_listado">
+  <nav class="blue lighten-1">   
+    <a href="#" data-activates="mobile-demo" class="button-collapse" id="arrow23"><i class="material-icons">arrow_back</i></a>
+    <div class="brand-logo center" id="category_text"></div>   
+  </nav>  
+</div>
+
 </header>  
   <!-- loading -->
   <div class="row center loading">
@@ -61,6 +67,11 @@
       </div>
     </div>
   </div>
+
+<!-- insert counter -->
+<div class="row" id="insert_message">
+  <div class="center red-text"><i class="material-icons medium">flash_on</i><span id="insert_message_text" style="font-size:5em;font-weight:200;"> </span><span style="font-size:3em;font-weight:200;">races</span></div>
+</div>
 
   <section id="eventos">
 
