--- a/www/index2.html
+++ b/www/index2.html
@@ -29,7 +29,7 @@
   </nav>
   </div> -->
 
-<div class="navbar-fixed" id="nav_listado">
+<div class="navbar-fixed">
   <nav class="blue lighten-1">   
     <div class="nav-wrapper">
     <ul class="left">
@@ -58,7 +58,7 @@
     </div>
   </div>
 </div>-->
-<div class="row">
+<div class="row" id="insert_message">
   <div class="center red-text"><i class="material-icons medium">flash_on</i><span style="font-size:5em;font-weight:200;">175 </span><span style="font-size:3em;font-weight:200;">races</span></div>
 </div>
   <section>
