--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 
 <div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
-    <a href="#" data-activates="mobile-demo" class="button-collapse" id="arrow23"><i class="material-icons">arrow_back</i></a>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i id="arrow23" class="material-icons">&#xE5C4;</i></a>
     <div class="brand-logo center" id="category_text"></div>   
   </nav>  
 </div>
