--- a/www/index2.html
+++ b/www/index2.html
@@ -29,14 +29,10 @@
   </nav>
   </div> -->
 
-<div class="navbar-fixed">
+<div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
-    <div class="nav-wrapper">
-    <ul class="left">
-          <li><a href="#"><i class="material-icons" id="arrow">arrow_back</i></a></li>
-    </ul>      
-      <a href="#" class="brand-logo center">Category / WRC</a>
-    </div>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i id="arrow23" class="material-icons">&#xE5C4;</i></a>
+    <div class="brand-logo center" id="category_text"></div>   
   </nav>  
 </div>
 
