--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 
 <div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i id="arrow23" class="material-icons">&#xE5C4;</i></a>
+    <i id="arrow23" class="material-icons small">&#xE5C4;</i>
     <div class="brand-logo center" id="category_text"></div>   
   </nav>  
 </div>
@@ -70,7 +70,7 @@
 
 <!-- insert counter -->
 <div class="row" id="insert_message">
-  <div class="center red-text"><i class="material-icons medium">flash_on</i><span id="insert_message_text" style="font-size:5em;font-weight:200;"> </span><span style="font-size:3em;font-weight:200;">races</span></div>
+  <div class="center red-text"><i class="material-icons medium">&#xE3E7;</i><span id="insert_message_text" style="font-size:5em;font-weight:200;"> </span><span style="font-size:3em;font-weight:200;">races</span></div>
 </div>
 
   <section id="eventos">
