--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 
 <div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
-    <i id="arrow23" class="material-icons small">&#xE5C4;</i>
+    <i id="arrow23" class="material-icons medium">&#xE5C4;</i>
     <div class="brand-logo center" id="category_text"></div>   
   </nav>  
 </div>
