--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" /> 
-        <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
-        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
         <title>Racing Calendar</title>
     </head>
     <body>
@@ -48,7 +46,7 @@
 
 <div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
-    <i id="arrow23" class="material-icons medium">&#xE5C4;</i>
+    <i id="arrow23" class="material-icons small">&#xE5C4;</i>
     <div class="brand-logo center" id="category_text"></div>   
   </nav>  
 </div>
