--- a/www/index2.html
+++ b/www/index2.html
@@ -31,8 +31,8 @@
 
 <div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i id="arrow23" class="material-icons">&#xE5C4;</i></a>
-    <div class="brand-logo center" id="category_text"></div>   
+    <i id="arrow23" class="material-icons small">&#xE5C4;</i>
+    <div class="brand-logo center" id="category_text">category / Turismo Carretera</div>   
   </nav>  
 </div>
 
@@ -164,6 +164,8 @@ $(document).ready(function() {
     $("#insert_message").show();
 });
 
+var tc = "turismo carretera";
+console.log(tc.length + "aca");
         </script>    
 </body>
 </html>
