--- a/www/index.html
+++ b/www/index.html
@@ -35,10 +35,14 @@
   <nav class="blue lighten-1">
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="1">F&oacute;rmula 1</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="5">Turismo Carretera</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="7">World Rally Car</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="8">S&uacute;per TC 2000</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="9">NASCAR</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="17">Turismo Nacional</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="29">WTCC</a></li>
+        <li><a href="#" class="side_click" data-id_categoria="4">MotoGP</a></li>
       </ul>
     <div class="center" id="rango_fechas" data-posicion="0"></div>       
   </nav>
@@ -86,7 +90,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2015 Copyright Patricio Arango <button id="borrar">borrar db</button>
+            © 2015 Copyright Patricio Arango <!-- <button id="borrar">borrar db</button>-->
             <a class="grey-text text-lighten-4 right" href="http://autowikipedia.es" target="_blank">autowikipedia.es</a>
             </div>
           </div>
