--- a/www/index2.html
+++ b/www/index2.html
@@ -32,7 +32,7 @@
 <div class="navbar-fixed" id="nav_listado">
   <nav class="blue lighten-1">   
     <i id="arrow23" class="material-icons small">&#xE5C4;</i>
-    <div class="brand-logo center" id="category_text">category / Turismo Carretera</div>   
+    <div class="brand-logo center" id="category_text"><span style="font-weight:200;">category / </span><span>Formula 111111</span></div>   
   </nav>  
 </div>
 
