--- a/www/index.html
+++ b/www/index.html
@@ -27,58 +27,26 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" /> 
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
-        <title>Racing Calendar</title>
+        <title>Brain vs. Crane</title>
     </head>
     <body>
   <header>
-<div class="navbar-fixed" id="nav_eventos">  
-  <nav class="blue lighten-1">
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="side-nav" id="mobile-demo">
-        <li><a href="#" class="side_click" data-id_categoria="1">F&oacute;rmula 1</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="5">Turismo Carretera</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="7">World Rally Car</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="8">S&uacute;per TC 2000</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="9">NASCAR</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="17">Turismo Nacional</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="29">WTCC</a></li>
-        <li><a href="#" class="side_click" data-id_categoria="4">MotoGP</a></li>
-      </ul>
-    <div class="center" id="rango_fechas" data-posicion="0"></div>       
-  </nav>
-</div>  
 
-<div class="navbar-fixed" id="nav_listado">
+
+<div class="navbar-fixed" >
   <nav class="blue lighten-1">   
-    <i id="arrow23" class="material-icons small">&#xE5C4;</i>
-    <div class="brand-logo center" id="category_text"></div>   
+    <div class="brand-logo center" id="category_text">Brain vs. Crane</div>   
   </nav>  
 </div>
 
 </header>  
-  <!-- loading -->
-  <div class="row center loading">
-     <div class="preloader-wrapper active">
-      <div class="spinner-layer spinner-red-only">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-<!-- insert counter -->
-<div class="row" id="insert_message">
-  <div class="center red-text"><i class="material-icons medium">&#xE3E7;</i><span id="insert_message_text" style="font-size:5em;font-weight:200;"> </span><span style="font-size:3em;font-weight:200;">races</span></div>
-</div>
 
   <section id="eventos">
-
+  <img src="" id="myImage" >
   </section>
+
+      <button onclick="capturePhoto();">Capture Photo</button> <br>
       <footer class="page-footer blue lighten-1">
           <div class="container">
             <div class="row">
@@ -98,44 +66,9 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jQuery.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script src="js/latlong.js"></script>
-        <script src="js/geo.js"></script>  
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
-        <script>
-var db;
-var shortName = 'rc2016';
-var version = '1.0';
-var displayName = 'rc2016';
-var maxSize = 65535;
-function nullHandler(testo){
-  alert(testo);
-};
-
-function successHandler(){
-  console.log("oka");
-};
-
-function errorHandler(tx,error) {
-   console.log('OKA: ' + error.message + ' code: ' + error.code);
-}
-
-function borrarDB() { 
-   window.localStorage.setItem("rc2016_firstime","0");
-    var db = openDatabase(shortName, version, displayName, maxSize);
-    db.transaction(borracionDB, nullHandler("crear"), errorHandler);
-}
-function borracionDB(tx) { 
-var sql = "DROP TABLE carreras";
-    tx.executeSql(sql); 
-  }
-
-
-$("#borrar").click(function() {
-  borrarDB();
-});
-</script>
     </body>
 </html>
